objects/ACCObjTest1__c.object
<CustomObject>
    <fields>
        <fullName>ACCField1__c</fullName>
        <label>ACCField1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCField2__c</fullName>
        <label>ACCField2</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLt1__c</fullName>
        <label>PLt1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plt3__c</fullName>
        <label>Plt3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TextField15__c</fullName>
        <label>TextField15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>ACCObjTest1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ACCObjTest1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObjTest1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>